[project]
name = "comfyui-save-webp-meta-node"
description = "ComfyUI node for saving WebP, PNG, JPEG, and AVIF images with embedded prompt metadata."
version = "1.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/ukr8b3g-cmyk/ComfyUI-save-webp-meta-node"
Documentation = "https://github.com/ukr8b3g-cmyk/ComfyUI-save-webp-meta-node#readme"
"Bug Tracker" = "https://github.com/ukr8b3g-cmyk/ComfyUI-save-webp-meta-node/issues"

[tool.comfy]
PublisherId = "ukr8b3g-cmyk"
DisplayName = "Save WEBP Meta"
